fixed dropdown on mobile

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -14,15 +14,11 @@ body {
 }
 
 .nav-item {
-  padding: 15px 10px;
+  padding: 20px 13px;
   text-decoration: none;
   cursor: pointer;
 }
 
 .active-link {
   border-bottom: 2px solid rgb(255, 102, 0);
-}
-
-.signout {
-  color:white;
 }
